overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
     width: 100%;
     text-align: center;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 a {
